Bug 352479 - Investigate moving debug to Java 1.5 BREE